Version 0.9.2+dev
- test suits can have custom names
- possible BC break: made Environment::$taskCount protected (use Environment::getCounter() to get its value)
- possible BC break: made Environment::$output protected (use Environment::getOutput() to get its value)
- clarified error message when trying to set invalid output mode

Version 0.9.2
- raised minimal version of PHP to 5.4
- added automated tests runner (requires package nette/robot-loader)
- added dependency on nette/reflection
- tests can have custom names
- tests (in TestCase) can be skipped

Version 0.9.1a
- small code refactoring
- added README with documentation
- made possible installation via composer

Version 0.9.1
- print correct line ending when run from browswer
- small code refactoring

Version 0.9.0
- initital version